voltera-p2p-go/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: voltera-gateway
  namespace: voltera
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voltera-vs
  namespace: voltera
spec:
  hosts:
  - "*"
  gateways:
  - voltera-gateway
  http:
  - match:
    - uri:
        prefix: /api/orden
    - uri:
        prefix: /health
    route:
    - destination:
        host: api-handler.voltera.svc.cluster.local
        port:
          number: 8000
